--- a/1.HTML
+++ b/1.HTML
@@ -10,6 +10,6 @@
     <li><a href="1.html">Click Here</a></li>
   </ol>
   <h2> 자기 하이룽>< </h2>
-  <img src="JSJ.jpg" width="50%">
+  <img src="JSJ.jpeg" width="50%">
 </body>
 </html>
